Fixed the slider so my resume download button is now clickable regardless of window width. Commented out z-index in style.css line 255

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -219,7 +219,8 @@ html[xmlns] .flexslider .slides {
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
-  border-radius: 20px;
+  border-radius: 20px;;
+  z-index: -1
 }
 .flex-control-paging li a:hover {
   background: #333;
