--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ figure {
         position: relative; }
     #colorlib-hero .flexslider .flex-control-nav {
       bottom: 20px;
-      z-index: 1000;
+      /* z-index: 1000; */
       left: 20px;
       float: left;
       width: auto; }
